# SLP301

./: Auditory_Model_Classification.ipynb  Isolated_Word_pt_v2.ipynb  extract_pptx.py  main.py  pptx_text.txt  pyproject.toml  speech_control_pytorch.pth  speech_control_v2.pth
practice_analysis/: Audio_Analysis_Spectrogram.ipynb  Practical Implementation Assignment.ipynb  Thoại 260518_163911_1.m4a  ste_stm.ipynb  update_nb.py
slide/: 00 - Course Introduction.ppt  01 -  Introduction to Digital Speech Processing.pptx  02 -  Review of Fundementals of DSP.pptx  03 - Human Speech Production.pptx  04 - Hearing, Auditory Models, and Speech Perception.pptx  05 - Time-Domain Methods for Speech Processing.pptx  06 - Frequency-Domain Representations.pptx  07 - Linear Predictive Analysis of Speech Signals.pptx  08 - Algorithms for Estimating Speech Parameters.pptx  09 - Text-to-Speech Synthesis Methods.pptx  10 - Automatic Speech Recognition and NLU.pptx
