[project]
name = "slp301"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "ipython>=9.13.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pyworld>=0.3.5",
    "soundfile>=0.13.1",
    "torch==2.11.0",
    "torchaudio==2.11.0",
    "torchvision==0.26.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
