[project]
name = "slp301"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "ipywidgets>=8.1.8",
    "librosa>=0.11.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pygame>=2.6.1",
    "pyworld>=0.3.5",
    "resampy>=0.4.3",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "torch==2.11.0",
    "torchaudio==2.11.0",
    "torchvision==0.26.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
